--- a/da-indexer/docker-compose.yml
+++ b/da-indexer/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       POSTGRES_HOST_AUTH_METHOD: 'trust'
     ports:
       - "9432:5432"
+    volumes:
+      - ./database:/var/lib/postgresql/data
   
   da-indexer:
     build:
@@ -33,6 +35,6 @@ services:
       - ./da-indexer-server/config/base.env
     volumes:
       ## optional: you can use default config or provide custom via file
-      - ./da-indexer-server/config/base.toml:/app/config.toml
+      - ./da-indexer-server/config/eigenda.toml:/app/config.toml
     extra_hosts:
       - "host.docker.internal:host-gateway"
