--- a/da-indexer/da-indexer-server/config/eigenda.toml
+++ b/da-indexer/da-indexer-server/config/eigenda.toml
@@ -14,7 +14,7 @@ concurrency = 1
 type = "EigenDA"
 disperser = "https://disperser-holesky.eigenda.xyz:443"
 contract_address = "0xD4A7E1Bd8015057293f0D0A557088c286942e84b"
-start_height = 1601470
+contract_creation_block = 1168412
 
 [indexer.da.rpc]
 url = "https://holesky.drpc.org"
