--- a/da-indexer/da-indexer-server/config/eigenda.toml
+++ b/da-indexer/da-indexer-server/config/eigenda.toml
@@ -8,13 +8,15 @@ enabled = false
 addr = "0.0.0.0:8051"
 
 [indexer]
-concurrency = 1
+concurrency = 2
+restart_delay = 5
 
 [indexer.da]
 type = "EigenDA"
 disperser = "https://disperser-holesky.eigenda.xyz:443"
 contract_address = "0xD4A7E1Bd8015057293f0D0A557088c286942e84b"
 contract_creation_block = 1168412
+start_height = 1622210
 
 [indexer.da.rpc]
 url = "https://holesky.drpc.org"
