--- a/da-indexer/da-indexer-server/config/eigenda.toml
+++ b/da-indexer/da-indexer-server/config/eigenda.toml
@@ -8,7 +8,7 @@ enabled = false
 addr = "0.0.0.0:8051"
 
 [indexer]
-concurrency = 2
+concurrency = 4
 restart_delay = 5
 
 [indexer.da]
@@ -16,11 +16,12 @@ type = "EigenDA"
 disperser = "https://disperser-holesky.eigenda.xyz:443"
 contract_address = "0xD4A7E1Bd8015057293f0D0A557088c286942e84b"
 contract_creation_block = 1168412
-#start_height = 1626773
+save_batch_size = 20
+pruning_block_threshold = 1000 # TODO: rename it
 
 [indexer.da.rpc]
 url = "https://holesky.drpc.org"
-batch_size = 10000
+batch_size = 100
 
 [database]
 connect.url = "postgres://postgres:admin@127.0.0.1:9432/blockscout" # (required) no default value available
