--- a/da-indexer/da-indexer-server/config/eigenda.toml
+++ b/da-indexer/da-indexer-server/config/eigenda.toml
@@ -10,6 +10,9 @@ addr = "0.0.0.0:8051"
 [indexer]
 concurrency = 4
 restart_delay = 5
+catchup_interval = 0
+retry_interval = 180
+polling_interval = 12
 
 [indexer.da]
 type = "EigenDA"
@@ -17,11 +20,11 @@ disperser = "https://disperser-holesky.eigenda.xyz:443"
 contract_address = "0xD4A7E1Bd8015057293f0D0A557088c286942e84b"
 contract_creation_block = 1168412
 save_batch_size = 20
-pruning_block_threshold = 1000 # TODO: rename it
+pruning_block_threshold = 1000 
 
 [indexer.da.rpc]
 url = "https://holesky.drpc.org"
-batch_size = 100
+batch_size = 10000
 
 [database]
 connect.url = "postgres://postgres:admin@127.0.0.1:9432/blockscout" # (required) no default value available
